# QT-Login

./: README.md
Simple QT Login Authentication/: CMakeLists.txt  Database.cpp  Database.h  Images.qrc  Main.qml  main.cpp
Simple QT Login Authentication/Pages/: LandingPage.qml  LoginPage.qml  MessagesPage.qml
Simple QT Login Authentication/Utils/: CustomCheckBox.qml
